--- a/cdk/config.json
+++ b/cdk/config.json
@@ -1,5 +1,5 @@
 {
   "region": "us-east-1",
-  "channelType": "BASIC",
-  "allowedOrigins": ["http://localhost:3000"]
+  "channelType": "STANDARD",
+  "allowedOrigins": ["*"]
 }
