--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "cdk",
-  "version": "0.1.0",
-  "bin": {
-    "cdk": "bin/cdk.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "cdk": "cdk"
-  },
-  "devDependencies": {
-    "@types/aws-lambda": "^8.10.93",
-    "@types/node": "17.0.23",
-    "aws-cdk": "^2.19.0",
-    "esbuild": "^0.14.31",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
-  },
-  "dependencies": {
-    "@aws-sdk/client-ivs": "^3.58.0",
-    "@aws-sdk/client-s3": "^3.58.0",
-    "aws-cdk-lib": "2.19.0",
-    "constructs": "^10.0.106",
-    "source-map-support": "^0.5.16"
-  }
+	"name": "cdk",
+	"version": "0.1.0",
+	"bin": {
+		"cdk": "bin/cdk.js"
+	},
+	"scripts": {
+		"build": "tsc",
+		"watch": "tsc -w",
+		"cdk": "cdk"
+	},
+	"devDependencies": {
+		"@types/aws-lambda": "^8.10.93",
+		"@types/node": "17.0.23",
+		"aws-cdk": "^2.19.0",
+		"esbuild": "^0.14.31",
+		"ts-node": "^10.7.0",
+		"typescript": "^4.6.3"
+	},
+	"dependencies": {
+		"@aws-sdk/client-ivs": "^3.58.0",
+		"@aws-sdk/client-s3": "^3.58.0",
+		"@aws-sdk/client-dynamodb": "^3.58.0",
+		"aws-cdk-lib": "2.19.0",
+		"constructs": "^10.0.106",
+		"source-map-support": "^0.5.16"
+	}
 }
